# PMR-Knowledge-Exploration

./: LICENSE  README.md  main.py  pyproject.toml
pmr_ke/: __init__.py  __main__.py
pmr_ke/process_rdf/: __init__.py  analyse_rdf.py  extract_rdf.py  utilities.py
pmr_ke/visulisation/: __init__.py  vis_bioProcess.py
