[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["pmr_ke"]

[project]
name = "pmr-knowledge-exploration"
version = "0.1.0"
description = "Explore methods for encoding and processing biophysics knowledge to enable efficient search and retrieval in PMR."
authors = [
    { name = "Weiwei Ai", email = "wai484@aucklanduni.ac.nz" }
]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastembed>=0.8.0",
    "graphviz>=0.21",
    "pyvis>=0.3.2",
    "qdrant-client>=1.18.0",
    "rdflib>=7.6.0",
]

[project.scripts]
pmr_ke = "pmr_ke.__main__:main"
